Add textarea and button

--- a/views/new.erb
+++ b/views/new.erb
@@ -1,1 +1,20 @@
+<html>
+<head>
+  
+</head>
+<body>
 <h2>Add New Post</h2>
+
+<p>
+<form action="/feedback" method="POST" role="form">
+
+  <div class="form-group">
+    <textarea class="form-control" rows="5" placeholder="Ну давай, что накипело?"></textarea>
+  </div>
+
+  <button type="submit" class="btn btn-primary">YARRR!</button>
+</form>
+</p>
+
+</body>
+</html>
