--- a/views/new.erb
+++ b/views/new.erb
@@ -1,12 +1,11 @@
 <html>
 <head>
-  
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
 <h2>Add New Post</h2>
 
-<p>
-<form action="/feedback" method="POST" role="form">
+<form action="/new" method="POST" role="form">
 
   <div class="form-group">
     <textarea class="form-control" rows="5" placeholder="Ну давай, что накипело?"></textarea>
@@ -14,7 +13,6 @@
 
   <button type="submit" class="btn btn-primary">YARRR!</button>
 </form>
-</p>
 
 </body>
 </html>
