Read content variable from post request

--- a/views/new.erb
+++ b/views/new.erb
@@ -8,7 +8,7 @@
 <form action="/new" method="POST" role="form">
 
   <div class="form-group">
-    <textarea class="form-control" rows="5" placeholder="Ну давай, что накипело?"></textarea>
+    <textarea class="form-control" rows="5" name="content" placeholder="Ну давай, что накипело?"></textarea>
   </div>
 
   <button type="submit" class="btn btn-primary">YARRR!</button>
