--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
     <br>
     Added at <%= post['created_date'] %>
     <br><br>
-    <a href="/post/<%= post['id'] %>">Comments</a>
+    <a href="/comments/<%= post['id'] %>">Comments</a>
   </p>
   <hr>
 <% end %>
