--- a/views/new.erb
+++ b/views/new.erb
@@ -1,6 +1,5 @@
-<html>
 <head>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 <h2>Add New Post</h2>
@@ -15,4 +14,4 @@
 </form>
 
 </body>
-</html>
+
