--- a/views/comments.erb
+++ b/views/comments.erb
@@ -1,34 +1,36 @@
-<body style="font-family: Georgia;">
+<div style="font-family: Georgia; width: 80%">
 <h4>Post details</h4>
 
-<p>
+<div style="background-color: #fff5c2; padding: 15px;">
   <%= @row['content'] %>
   <br>
   <br>
   Added at <%= @row['created_date'] %>
-</p>
+</div>
 <hr>
 <br>
-<h4>Comments:</h4>
-<br>
+<div style="padding: 15px;">
+  <h4>Comments:</h4>
+  <br>
 
-<% @comments.each do |com| %>
-  <p>
-  <%= com['content'] %>
-  </p>
-  <p>
-    <span style="font-size: 75%; color: #999">Added at <%= com['created_date'] %></span>
-  </p>
-  <hr>
-<% end %>
+  <% @comments.each do |com| %>
+    <p>
+    <%= com['content'] %>
+    </p>
+    <p>
+      <span style="font-size: 75%; color: #999">Added at <%= com['created_date'] %></span>
+    </p>
+    <hr>
+  <% end %>
 
-<form action="/comments/<%= @row['id'] %>" method="POST" role="form">
+  <form action="/comments/<%= @row['id'] %>" method="POST" role="form">
 
-  <div class="form-group">
-    <textarea class="form-control" rows="4" name="content" placeholder="Напиши комментарий!"></textarea>
-  </div>
+    <div class="form-group">
+      <textarea class="form-control" rows="4" name="content" placeholder="Напиши комментарий!"></textarea>
+    </div>
 
-  <button type="submit" class="btn btn-primary">YARRR!</button>
-</form>
+    <button type="submit" class="btn btn-primary">YARRR!</button>
+  </form>
+</div>
 
-</body>
+</div>
