--- a/views/index.erb
+++ b/views/index.erb
@@ -1,13 +1,14 @@
 <h2>Latest posts:</h2><br>
 
 <% @results.each do |post| %>
-  <p>
-    <%= post['content'] %>
-    <br>
-    <br>
-    Added at <%= post['created_date'] %>
-    <br><br>
+    <p>
+      <%= post['content'] %>
+      <br>
+      <br>
+    <p>
+      <span style="font-size: 75%; color: #999">Написал <%= post['login'] %> <%= post['created_date'] %></span>
+    </p>
     <a href="/comments/<%= post['id'] %>">Comments</a>
-  </p>
-  <hr>
+    </p>
+    <hr>
 <% end %>
